<resources>
    <string name="app_name">Resonate</string>
    <string name="testString">Local Music Scene</string>
    <string name="loginEmail">Email Address</string>
    <string name="loginPass">Password</string>
    <string name="loginNoPass">can\'t remember your password?</string>
    <string name="loginNoAcc">don\'t have an account?</string>
    <string name="loginDesc">Login</string>
    <string name="logoDesc">Logo</string>
    <string name="title_activity_login">Login</string>
    <string name="loginInvalid">Invalid Login</string>
    <string name="loginSuccess">Login Successful</string>
    <string name="signUpFname">First Name</string>
    <string name="signUpLname">Last Name</string>
    <string name="signUpChekPass">Confirm Password</string>
    <string name="signUpDesc">Sign Up</string>
    <string name="forgotSendDesc">Send</string>
    <string name="forgotText">What\'s your email address?</string>
    <string name="confirmForgot">Please enter the reset code we sent you</string>
    <string name="resetCode">Reset Code</string>
    <string name="resetDesc">Reset Password</string>
    <string name="resetChangePass">Change Password</string>
    <string name="newPass">New Password</string>
    <string name="oldPass">Old Password</string>
    <string name="newPassConfirm">Confirm New Password</string>
    <string name="bandName">Band Name</string>
    <string name="bandGenre">Genre</string>
    <string name="Bio">Bio</string>
    <string name="manageHometown">Hometown</string>
    <string name="buttonSave">Save</string>
    <string name="taxBarLocation">Tap to set Location</string>
    <string name="feed">Shows</string>
    <string name="forum">Forum</string>
    <string name="bands">Bands</string>
    <string name="home">Home</string>
    <string name="savedEvents">Saved Events</string>
    <string name="favBands">Favourite Bands</string>
    <string name="manBands">Manage Band</string>
    <string name="notifs">Notifications</string>
    <string name="fname">David</string>
    <string name="lname">MacLean</string>
    <string name="logout">Log Out</string>
    <string name="myProfile">My Profile</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="update">Update</string>
    <string name="addEvent">Add Event</string>
    <string name="showName">Show Name</string>
    <string name="perfBands">Artist(s) Performing</string>
    <string name="tos">Time of Show</string>
    <string name="dos">Date of Show</string>
    <string name="venName">Venue Name</string>
    <string name="venAdd">Venue Address</string>
    <string name="poa">Price of Admission</string>
    <string name="descos">Description of Show</string>

    <string-array name="genre_array">
        <item>Alternative</item>
        <item>Blues</item>
        <item>Classical</item>
        <item>Country</item>
        <item>Electronic</item>
        <item>Folk</item>
        <item>Jazz</item>
        <item>Metal</item>
        <item>Pop</item>
        <item>Rock</item>
        <item>Hip Hop/Rap</item>
        <item>Reggae/Ska</item>
        <item>World</item>
    </string-array>
    <string name="title_activity_temp">TEMP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>


