<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/logoDesc"
        android:id="@+id/signUpLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_weight="3"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
            <EditText
                android:id="@+id/signUpFnameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/signUpFname"
                android:padding="25dp"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"/>

            <EditText
                android:id="@+id/signUpLnameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/signUpLname"
                android:padding="25dp"
                android:layout_below="@+id/signUpFnameField"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"/>

            <EditText
                android:id="@+id/signUpEmailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/loginEmail"
                android:padding="25dp"
                android:layout_below="@+id/signUpLnameField"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"/>

            <EditText
                android:id="@+id/signUpPassField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/loginPass"
                android:padding="25dp"
                android:layout_below="@+id/signUpEmailField"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"/>

            <EditText
                android:id="@+id/signUpChekPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/signUpChekPass"
                android:padding="25dp"
                android:layout_below="@+id/signUpPassField"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"/>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:contentDescription="@string/signUpDesc"
        android:id="@+id/loginButton"
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="105dp"
        android:layout_marginLeft="105dp"
        android:background="@drawable/login_button"
        android:text="@string/signUpDesc"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textSize="18sp"
        android:clickable="true"/>






</LinearLayout>