<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout ="@layout/little_toolbar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstName"
        android:fontFamily="monospace"
        android:textColor="@color/drkgry"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/profFNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:text="David"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastName"
        android:fontFamily="monospace"
        android:textColor="@color/drkgry"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/profLNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:text="MacLean"
        android:layout_marginLeft="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginEmail"
        android:fontFamily="monospace"
        android:textColor="@color/drkgry"
        android:id="@+id/textView"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/signUpEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="david.41hz@gmail.com"
        android:layout_marginLeft="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

    <Button
        android:contentDescription="@string/signUpDesc"
        android:id="@+id/profUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/update"
        android:textColor="@color/wht"
        android:textSize="18sp"
        android:clickable="true"
        android:fontFamily="monospace"
        android:elevation="2dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_gravity="center_vertical"/>

    <Button
        android:contentDescription="@string/signUpDesc"
        android:id="@+id/profchkpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/resetChangePass"
        android:textColor="@color/wht"
        android:textSize="18sp"
        android:clickable="true"
        android:fontFamily="monospace"
        android:elevation="2dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_gravity="center_vertical"/>

    </LinearLayout>

</LinearLayout>