<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/logoDesc"
        android:id="@+id/resetChgPassLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_weight="3"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <EditText
        android:id="@+id/resetChgPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/loginPass"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"/>

    <EditText
        android:id="@+id/resetChekPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/signUpChekPass"
        android:layout_marginTop="15dp"
        android:padding="25dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_below="@+id/resetChgPass"/>

    <Button
        android:contentDescription="@string/resetChangePass"
        android:id="@+id/ResetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="105dp"
        android:layout_marginLeft="105dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/login_button"
        android:text="@string/resetChangePass"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textSize="18sp"
        android:clickable="true"/>

    </RelativeLayout>

</LinearLayout>