<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/logoDesc"
        android:id="@+id/signUpLogo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_weight="2"
        android:elevation="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/forgotText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="25dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:text="@string/forgotText"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/forgotEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/loginEmail"
            android:layout_marginTop="15dp"
            android:padding="25dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_below="@+id/forgotText"
            android:elevation="5dp"/>

        <Button
            android:contentDescription="@string/forgotSendDesc"
            android:id="@+id/forgotButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginRight="105dp"
            android:layout_marginLeft="105dp"
            android:layout_below="@+id/forgotEmailField"
            android:background="@drawable/login_button"
            android:text="@string/forgotSendDesc"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="18sp"
            android:clickable="true"
            android:elevation="15dp"/>

    </RelativeLayout>

</LinearLayout>