<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/logo"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/resetText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/confirmForgot"
            android:textSize="25sp"
            android:gravity="center_horizontal"
            android:fontFamily="monospace"
            android:textColor="@color/drkgry"
            android:layout_marginTop="25dp"/>


        <EditText
            android:id="@+id/resetCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/resetCode"
            android:layout_marginTop="15dp"
            android:padding="25dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_below="@+id/resetText"/>

        <Button
            android:contentDescription="@string/resetDesc"
            android:id="@+id/ResetButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginRight="105dp"
            android:layout_marginLeft="105dp"
            android:layout_below="@+id/resetCode"
            android:background="@drawable/login_button"
            android:text="@string/resetDesc"
            android:textColor="@color/wht"
            android:textSize="18sp"
            android:clickable="true"
            android:fontFamily="monospace"
            android:elevation="2dp"/>

    </RelativeLayout>


</LinearLayout>