<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarHigh"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blk"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profpic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_event"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/profileText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addEvent"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:clickable="true"
                android:textColor="@color/wht"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/profpic"
                android:layout_toEndOf="@+id/profpic"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showName"
        android:fontFamily="serif-monospace"
        android:textColor="@color/drkgry"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:text=""
        android:id="@+id/showTitleField"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:maxLines="2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/perfBands"
        android:fontFamily="serif-monospace"
        android:textColor="@color/drkgry"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/bandNameField"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tos"
        android:fontFamily="serif-monospace"
        android:textColor="@color/drkgry"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="15sp"/>

            <TimePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timeField"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dos"
                android:fontFamily="serif-monospace"
                android:textColor="@color/drkgry"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="15sp"/>

            <DatePicker
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/dateField"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/venName"
                android:fontFamily="serif-monospace"
                android:textColor="@color/drkgry"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="15sp"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/venueField"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/venAdd"
                android:fontFamily="serif-monospace"
                android:textColor="@color/drkgry"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="15sp"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/venueAddressField"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/poa"
                android:fontFamily="serif-monospace"
                android:textColor="@color/drkgry"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="15sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/priceField"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descos"
                android:fontFamily="serif-monospace"
                android:textColor="@color/drkgry"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textSize="15sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:text=""
        android:id="@+id/showDescField"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"/>


    <Button
        android:contentDescription="add event"
        android:id="@+id/addEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_button"
        android:text="Add Event"
        android:textColor="@color/wht"
        android:textSize="18sp"
        android:clickable="true"
        android:fontFamily="serif-monospace"
        android:elevation="2dp"/>

        </LinearLayout>

    </ScrollView>
</LinearLayout>